Not perfect regressor.

--- a/data.tex
+++ b/data.tex
@@ -789,11 +789,11 @@ implicit information, as seen in \cref{tab:tidy3b}.
   \end{tabular}
 \end{tablebox}
 
-É comum que, durante a coleta de dados, várias unidades observacionais sejam registradas
-numa mesma tabela Para arrumar estes dados, cada uma delas deve ser transportada para uma
-tabela diferente A separação evita diversos tipos de potenciais inconsistências (processo
-associado à normalização de bases de dados) No entanto, durante a análise é possível que
-tenhamos que desnormalizá-las
+% É comum que, durante a coleta de dados, várias unidades observacionais sejam registradas
+% numa mesma tabela Para arrumar estes dados, cada uma delas deve ser transportada para uma
+% tabela diferente A separação evita diversos tipos de potenciais inconsistências (processo
+% associado à normalização de bases de dados) No entanto, durante a análise é possível que
+% tenhamos que desnormalizá-las
 
 \paragraph{Multiple types of observational units are stored in the same table}  For
 example, consider the \cref{tab:messy4}.  It is very common during data collection that
