--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,9 @@
 \usepackage{multirow}
 \usepackage[table]{xcolor}
 
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
+
 \usepackage{cleveref}
 \newcommand\pcref[1]{(\cref{#1})}
 
