--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,7 @@
 
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows.meta, positioning, shapes.geometric}
+\usepackage{pgfplots}
 
 \usepackage{titling}
 \usepackage[most]{tcolorbox}
