Fixed Vapnik edition.

--- a/history.tex
+++ b/history.tex
@@ -192,7 +192,7 @@ science.
 \textcite{Kelleher2018} provides an interesting time line of data-driven methods and
 influential figures in the field.  I reproduce it here with some changes, including
 some omissions and additions.  On the subject of data analysis, I include some remarks
-from \textcite{Vapnik1995}.
+from \textcite{Vapnik1999b}.
 
 I first address data handling --- which I include data sources, collection, organization,
 storage, and manipulation ---, and then data analysis and knowledge extraction.
