--- a/inductive.tex
+++ b/inductive.tex
@@ -88,7 +88,7 @@ $y_i \in \mathcal{Y}$.  We assume that samples are random independent identicall
 distributed (i.i.d.) observations drawn according to $$P(x, y) = P(x) P(y | x)\text{.}$$
 Both $P(x)$ and $P(y|x)$ are fixed but unknown.
 
-This is equivalent to the original learning problem stated by \textcite{Vapnik1995}, where
+This is equivalent to the original learning problem stated by \textcite{Vapnik1999b}, where
 a generator produce random vectors $\vec{x}$ according to a fixed but unknown
 probability distribution $P(x)$ and a supervisor returns an output value $y$ for every
 input vector $x$ according to a conditional distribution function $P(y|x)$, also fixed but
