--- a/references.bib
+++ b/references.bib
@@ -115,12 +115,13 @@
   note = {Hillis, W.D.: The Connection Machine. PhD thesis, MIT (1985)},
   url = {http://hdl.handle.net/1721.1/14719}}
 
-@book{Vapnik1995,
+@book{Vapnik1999b,
   author = {Vapnik, Vladimir Naumovich},
-  isbn = {0-387-94559-8},
+  isbn = {978-1-4419-3160-3},
   publisher = {Springer-Verlag New York, Inc.},
   title = {The nature of statistical learning theory},
-  year = 1995}
+  year = 1999,
+  edition = 2}
 
 @book{Hunt1966,
   author = {Hunt, Earl B. and Marin, John and Stone, Philip J.},
