Added law of large numbers.

--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -420,6 +420,14 @@ since
 
 Higher moments are defined similarly, look for skewness and kurtosis.
 
+\paragraph{Law of large numbers}  The law of large numbers states that the average of
+a large number of independent and identically distributed random variables converges
+to the expectation of the random variable.  Mathematically,
+\begin{equation*}
+  \lim_{n \rightarrow \infty} \frac{1}{n} \sum_{i = 1}^n X_i = E[X]\text{,}
+\end{equation*}
+given $X_i \sim X$ for all $i$.
+
 \subsection{Probability distributions}
 
 Several phenomena in nature and society can be modeled as random variables.  Some
