Fixes and highlighting slides.

--- a/history.tex
+++ b/history.tex
@@ -272,6 +272,22 @@ credited with developing a form of the pie chart now known as the polar area
 diagram.  She also reformed healthcare in the United Kingdom and
 is considered the founder of modern nursing\footfullcite{Grajalez2013}.
 
+\begin{slidebox}{Pre-digital age}{}
+  \begin{itemize}
+    \item Babylonian census (3,800 BC)
+    \item Sumerian archaic (pre-cuneiform) writing (3,500 BC)
+    \item Egyptian papyrus (3,000 BC)
+    \item Phoenician alphabet (1,000 BC)
+    \item Greek alphabet (800 BC)
+    \item Roman wax tablets (100 BC)
+    \item Codex (100 AD)
+    \item Chinese paper (200 AD)
+    \item Printing press (1440)
+    \item Typewriter (1868)
+    \item Florence Nightingale (1820 -- 1910)
+  \end{itemize}
+\end{slidebox}
+
 \begin{slidebox}{Florence Nightingale}{}
   \begin{itemize}
     \item Passionate statistician.
@@ -286,22 +302,6 @@ is considered the founder of modern nursing\footfullcite{Grajalez2013}.
     \item She was the first to use statistical graphics to present data in a way that was easy to understand.
     \item She is credited with developing a form of the pie chart now known as the polar area diagram.
     \item She reformed healthcare in the United Kingdom and is considered the founder of modern nursing.
-  \end{itemize}
-\end{slidebox}
-
-\begin{slidebox}{Pre-digital age}{}
-  \begin{itemize}
-    \item Babylonian census (3,800 BC)
-    \item Sumerian archaic (pre-cuneiform) writing (3,500 BC)
-    \item Egyptian papyrus (3,000 BC)
-    \item Phoenician alphabet (1,000 BC)
-    \item Greek alphabet (800 BC)
-    \item Roman wax tablets (100 BC)
-    \item Codex (100 AD)
-    \item Chinese paper (200 AD)
-    \item Printing press (1440)
-    \item Typewriter (1868)
-    \item Florence Nightingale (1820 -- 1910)
   \end{itemize}
 \end{slidebox}
 
@@ -530,8 +530,8 @@ limits on an unknown parameter.
 The Bayes' rule is the foundation of learning from evidence, once it allows us to
 calculate the probability of an event based on prior knowledge of conditions that might be
 related to the event.  Classifiers based on Naïve Bayes --- the application of Bayes'
-theoream with strong independence assumptions between known variables --- is likely to have
-been used since the second half of the eigtheenth century.
+theorem with strong independence assumptions between known variables --- is likely to have
+been used since the second half of the eighteenth century.
 
 \paragraph{Gauss' method of least squares}
 
