--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@
 
 \newtcbtheorem[auto counter, number within=chapter]{slidebox}{Slide}{
   float=th,
-  colframe=black!20!white,
+  colframe=blue!50!white,
   base
 }{sld}
 
