Citing sampling bias.

--- a/data.tex
+++ b/data.tex
@@ -249,6 +249,9 @@ people in a room is also a measurable phenomenon because we can count them.
 
 When we quantify a phenomenon, we perform data collection.  Data collection is the process
 of gathering data on targeted phenomenon in an established systematic way.
+Systematic means that we have a plan to collect the data and we understand the
+consequences of the plan, including the sampling bias.  Sampling bias is the influence
+that the method of collecting the data has on the conclusions we can draw from them.
 Once we have collected the data, we need to store them.  Data storage is the process of
 storing data in a computer.
 
