--- a/history.tex
+++ b/history.tex
@@ -195,7 +195,7 @@ some omissions and additions.  On the subject of data analysis, I include some r
 from \textcite{Vapnik1999b}.
 
 I first address data handling --- which I include data sources, collection, organization,
-storage, and manipulation ---, and then data analysis and knowledge extraction.
+storage, and transformation---, and then data analysis and knowledge extraction.
 
 \subsection{Timeline of data handling}
 
@@ -367,7 +367,7 @@ SQL is a domain-specific language used in programming and designed for managing 
 in a relational database management system (RDBMS).
 
 As a result, a new challenge rapidly emerged: how to aggregate data from different
-sources. Once data is stored in a relational database, it is easy to query and manipulate
+sources. Once data is stored in a relational database, it is easy to query and manage
 it. However, data is usually stored in different databases, and it is not always possible
 to combine them.
 
