Working on data handling operations.

--- a/data.tex
+++ b/data.tex
@@ -424,6 +424,7 @@ mainly focused on the requirements of data for analysis.  Both concepts have the
 mathematical foundations and tools for data handling.
 
 \subsection{Database normalization}
+\label{sec:normalization}
 
 Database normalization is the process of organizing the columns and tables of a relational
 database to minimize data redundancy and improve data integrity.
