--- a/main.tex
+++ b/main.tex
@@ -67,6 +67,8 @@
 \setsecnumdepth{subsection}
 \maxtocdepth{subsection}
 
+\babelhyphenation[english]{par-a-digm}
+
 \begin{document}
 
 \setmathfont{STIXTwoMath}[
