--- a/references.bib
+++ b/references.bib
@@ -258,3 +258,15 @@ keywords = {Relational database, Database design, Normalisation, Join dependenci
   year={2006},
   organization={Springer}
 }
+
+@inproceedings{Song2021,
+  author = {Song, Jie and Jagadish, H. V. and Alter, George},
+  title = {SDTA: An Algebra for Statistical Data Transformation},
+  year = {2021},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  doi = {10.1145/3468791.3468811},
+  booktitle = {Proc. of 33rd International Conference on Scientific and Statistical Database Management (SSDBM 2021)},
+  pages = {12},
+  location = {Tampa, FL, USA}
+}
